--- a/main/resources/assets/railguncraft/lang/zh_CN.lang
+++ b/main/resources/assets/railguncraft/lang/zh_CN.lang
@@ -7,4 +7,4 @@ item.nano_claw.info=看!它的伤害在跳动
 
 tile.adv_crafting_table.name=高级电力合成台
 
-itemGroup.Railguncraft=电磁炮电死你
+itemGroup.RailgunCraft=电磁炮mod创造模式物品栏
